k8s_setup/react-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-todo-ui
  namespace: default
  labels:
    app: react-todo-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: react-todo-ui
  template:
    metadata:
      labels:
        app: react-todo-ui
    spec:
      containers:
        - name: react-todo-ui
          image: "192.168.82.89:5000/todo-app-frontend:latest"
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: react-todo-ui-service
  namespace: default
  labels:
    app: react-todo-ui
spec:
  selector:
    app: react-todo-ui
  ports:
    - protocol: TCP
      port: 3000 # Frontend service port
      targetPort: 80 # Container port where Nginx serves the app
  type: ClusterIP
