k8s_setup/rust-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rust-todo-api
  namespace: default
  labels:
    app: rust-todo-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rust-todo-api
  template:
    metadata:
      labels:
        app: rust-todo-api
    spec:
      containers:
        - name: rust-todo-api
          image: "192.168.82.89:5000/todo-app-backend:latest"
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: default
  labels:
    app: rust-todo-api
spec:
  selector:
    app: rust-todo-api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
